Change site url to wiseodd.github.io

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ header-img: "img/home-bg.jpg"
 email: "kristiadi7@gmail.com"
 description: "Thoughts, experiences, field reports, and tech blogs from third world, nomad-wannabe, software developer"
 baseurl: ""
-url: "http://thirdworldnomad.com"
+url: "wiseodd.github.io"
 twitter_username: "wiseodd"
 github_username: "wiseodd"
 facebook_username: "agustinus.kristiadi7"
