Add Kota Kinabalu photo essay

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "Third World Nomad"
 header-img: "img/home-bg.jpg"
 email: "kristiadi7@gmail.com"
-description: "Thoughts, experiences, field reports, and tech blogs from third world, nomad, software developer"
+description: "Thoughts, photo essays, field reports, and tech blogs of a third world, nomad, software engineer"
 baseurl: ""
 url: "http://thirdworldnomad.com"
 twitter_username: "wiseodd"
