--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "Agustinus Kristiadi's Blog"
 header-img: "img/home-bg.jpg"
 email: "kristiadi7@gmail.com"
-description: "Thoughts, photo essays, field reports, and tech blogs!"
+description: ""
 baseurl: ""
 url: "http://wiseodd.github.io"
 twitter_username: "wiseodd"
