--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "Agustinus Kristiadi's Blog"
 header-img: "img/home-bg.jpg"
-email: "kristiadi7@gmail.com"
+email: "kristiadi@pm.me"
 description: ""
 baseurl: ""
 url: "http://wiseodd.github.io"
