Add covector fields article

--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,6 @@ plugins: ["jekyll-paginate", "jekyll-sitemap"]
 kramdown:
   input: GFM
   syntax_highlighter: rouge
+
+# Etc
+mathjax_url: "//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"
